# lyqtRpc

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  demo.sh  docker-compose.yml  mrpclog.txt  tp.txt
.github/workflows/: ci.yml
autobuild/: build.sh  docker.sh  quick_build.sh
demosh/: demo.sh
docs/cn/: architecture.md  shm-blog.md
docs/en/: architecture-en.md  shm-blog-en.md
gateway/: CMakeLists.txt
gateway/example/: gateway_server.cc
gateway/src/: diagnose_handler.hpp  gateway_handler.hpp  http_router.hpp  http_server.hpp
grafana/dashboards/: gateway.json
rpc/: CMakeLists.txt
rpc/example/: CMakeLists.txt
rpc/example/benchmark/: benchmark_client.cc  benchmark_client_json.cc  benchmark_server.cc  benchmark_server_json.cc  run_full_benchmark.sh
rpc/example/shm/: CMakeLists.txt  metrics_proto_server.cc  run_shm_benchmark.sh  shm_benchmark_client.cc  shm_benchmark_client_zc.cc  shm_benchmark_proto_client.cc  shm_benchmark_proto_server.cc  shm_benchmark_server.cc  shm_benchmark_server_zc.cc  shm_client.cc  shm_client_zc.cc  shm_proto_client.cc  shm_proto_server.cc  shm_server.cc  shm_server_zc.cc
rpc/example/test/test1/: CMakeLists.txt  circuit_breaker_test_client.cc  circuit_breaker_test_server.cc  rpc_server.cc  slow_rpc_server.cc
rpc/example/test/test2/: CMakeLists.txt
rpc/example/test/test3/: CMakeLists.txt
rpc/proto/: rpc_envelope.proto  rpc_message.fbs
rpc/src/: CMakeLists.txt
rpc/src/client/: caller.hpp  circuit_breaker.cpp  circuit_breaker.hpp  node_breaker.cpp  node_breaker.hpp  rpc_client.hpp  shm_client.hpp  shm_client_proto.hpp  shm_client_zc.hpp
rpc/src/general/: abstract.hpp  fields.hpp  main.cc  message.hpp  metrics.hpp  metrics_hooks.hpp  metrics_server.hpp  net.hpp  process_metrics.hpp  publicconfig.hpp  rate_limiter.hpp  shm_channel.cc  shm_channel.hpp  shm_client.hpp  shm_connection.hpp  shm_server.hpp  shm_zc_adaptor.hpp
rpc/src/general/log_system/: lcz_log.h
rpc/src/server/: async_circuit_store.cpp  async_circuit_store.hpp  circuit_store.hpp  etcd_circuit_store.cpp  etcd_circuit_store.hpp  etcd_leader_election.cpp  etcd_leader_election.hpp  etcd_registry_store.cpp  etcd_registry_store.hpp  leader_election.hpp  memory_circuit_store.cpp  memory_circuit_store.hpp  memory_leader_election.hpp  registry_store.hpp  rpc_router.hpp  rpc_server.hpp  shm_server.hpp  shm_server_proto.hpp  shm_server_zc.hpp
rpc/tests/: CMakeLists.txt  test_metrics.cc  test_metrics_server.cc  test_shm_channel.cc
